--- a/environments/staging/apps/my-app-second.yaml
+++ b/environments/staging/apps/my-app-second.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-app-second
+  name: foo-second
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
